@@ -271,6 +271,7 @@ var propPaths = {
     "mock": "mock",
     "multipart": "multipart",
     "querystring": "querystring",
+    "redirect": "redirect",
     "utils": "utils"
 };
 
