@@ -1,3 +1,7 @@
+= HEAD
+
+  * Added redirect module.
+
 = 0.4.2 / 2011-09-10
 
   * Added get/post/put/del/head/options convenience functions to Router/Builder.
